kubernetes/waluigi-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waluigi-worker-deployment
  namespace: waluigi
spec:
  replicas: 5
  selector:
    matchLabels:
      waluigi: worker
  template:
    metadata:
      labels:
        waluigi: worker
    spec:
      containers:
      - name: waluigi-worker-container
        image: localhost:32000/waluigi:latest
        imagePullPolicy: IfNotPresent
        command: ["wlworker"]
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "8Gi"
            cpu: "2"
        volumeMounts:
        - name: waluigi-data-volume
          mountPath: /data
      volumes:
      - name: waluigi-data-volume
        persistentVolumeClaim:
          claimName: waluigi-data-persistent-volume-claim
