kubernetes/waluigi-boss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waluigi-boss-deployment
  namespace: waluigi
spec:
  replicas: 3
  selector:
    matchLabels:
      waluigi: boss
  template:
    metadata:
      labels:
        waluigi: boss
    spec:
      containers:
      - name: waluigi-boss-container
        image: localhost:32000/waluigi:latest
        imagePullPolicy: IfNotPresent
        command: ["wlboss"]
        ports:
        - containerPort: 8082
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: waluigi-boss-service
  namespace: waluigi
spec:
  type: ClusterIP
  selector:
    waluigi: boss
  ports:
  - port: 8082
    targetPort: 8082
