kubernetes/waluigi-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waluigi-postgres-deployment
  namespace: waluigi
spec:
  replicas: 1
  selector:
    matchLabels:
      waluigi: postgres
  template:
    metadata:
      labels:
        waluigi: postgres
    spec:
      containers:
      - name: waluigi-postgres-container
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - name: waluigi-pgdata-volume
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "waluigi", "-d", "waluigi"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
      volumes:
      - name: waluigi-pgdata-volume
        persistentVolumeClaim:
          claimName: waluigi-pgdata-persistent-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: waluigi-postgres-service
  namespace: waluigi
spec:
  type: ClusterIP
  selector:
    waluigi: postgres
  ports:
  - port: 5432
    targetPort: 5432
